{
  "version": 4,
  "terraform_version": "0.15.0",
  "serial": 22,
  "lineage": "71bf8070-2f03-c581-1f93-4b758f6feb1f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Apache_EC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b0af3577fe5e3532",
            "arn": "arn:aws:ec2:us-east-1:035194411615:instance/i-05fe661414e5e354e",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05fe661414e5e354e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my_webserver_instances_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01340a05f75faac00",
            "private_dns": "ip-10-0-1-119.ec2.internal",
            "private_ip": "10.0.1.119",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0258e61ae96f68440",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0be905b9981a02578",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07bc2dd3979e06955"
            ]
          },
          "dependencies": [
            "aws_key_pair.my_webserver_instances_key",
            "aws_security_group.Allow_Webserver_sg",
            "aws_subnet.WebServer_subnets",
            "aws_vpc.WebServer_VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b0af3577fe5e3532",
            "arn": "arn:aws:ec2:us-east-1:035194411615:instance/i-09bbbd349828d9913",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09bbbd349828d9913",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my_webserver_instances_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08cce33dbe2f33072",
            "private_dns": "ip-10-0-2-52.ec2.internal",
            "private_ip": "10.0.2.52",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-071ecaca840cddce8",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fb78a680648d7317",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07bc2dd3979e06955"
            ]
          },
          "dependencies": [
            "aws_subnet.WebServer_subnets",
            "aws_vpc.WebServer_VPC",
            "aws_key_pair.my_webserver_instances_key",
            "aws_security_group.Allow_Webserver_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "webserver_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:035194411615:internet-gateway/igw-0163fcd6ce9ce74ff",
            "id": "igw-0163fcd6ce9ce74ff",
            "owner_id": "035194411615",
            "vpc_id": "vpc-05b3d97f0a5029881"
          },
          "dependencies": [
            "aws_vpc.WebServer_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "webserver_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:035194411615:loadbalancer/app/webserver-alb/4d68119a6301b270",
            "arn_suffix": "app/webserver-alb/4d68119a6301b270",
            "dns_name": "webserver-alb-881047784.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:035194411615:loadbalancer/app/webserver-alb/4d68119a6301b270",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "webserver-alb",
            "security_groups": [
              "sg-07bc2dd3979e06955"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0be905b9981a02578"
              },
              {
                "subnet_id": "subnet-0fb78a680648d7317"
              }
            ],
            "subnets": [
              "subnet-0be905b9981a02578",
              "subnet-0fb78a680648d7317"
            ],
            "tags": {
              "Name": "webserver-alb"
            },
            "tags_all": {
              "Name": "webserver-alb"
            },
            "vpc_id": "vpc-05b3d97f0a5029881",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.Allow_Webserver_sg",
            "aws_subnet.WebServer_subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "webserver_alb_listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:035194411615:listener/app/webserver-alb/4d68119a6301b270/1715d3594c09f9d9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:035194411615:targetgroup/webserver-lb-target-group/bc1347dcea9c645b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:035194411615:listener/app/webserver-alb/4d68119a6301b270/1715d3594c09f9d9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:035194411615:loadbalancer/app/webserver-alb/4d68119a6301b270",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.webserver_alb",
            "aws_lb_target_group.webserver_lb_target_group",
            "aws_security_group.Allow_Webserver_sg",
            "aws_subnet.WebServer_subnets",
            "aws_vpc.WebServer_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "webserver_lb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:035194411615:targetgroup/webserver-lb-target-group/bc1347dcea9c645b",
            "arn_suffix": "targetgroup/webserver-lb-target-group/bc1347dcea9c645b",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:035194411615:targetgroup/webserver-lb-target-group/bc1347dcea9c645b",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "webserver-lb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05b3d97f0a5029881"
          },
          "dependencies": [
            "aws_vpc.WebServer_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "webserver_alb_target_group_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:035194411615:targetgroup/webserver-lb-target-group/bc1347dcea9c645b-20211024215244587800000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:035194411615:targetgroup/webserver-lb-target-group/bc1347dcea9c645b",
            "target_id": "i-05fe661414e5e354e"
          },
          "dependencies": [
            "aws_instance.Apache_EC2",
            "aws_lb_target_group.webserver_lb_target_group",
            "aws_vpc.WebServer_VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:035194411615:targetgroup/webserver-lb-target-group/bc1347dcea9c645b-20211024215243943100000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:035194411615:targetgroup/webserver-lb-target-group/bc1347dcea9c645b",
            "target_id": "i-09bbbd349828d9913"
          },
          "dependencies": [
            "aws_instance.Apache_EC2",
            "aws_lb_target_group.webserver_lb_target_group",
            "aws_vpc.WebServer_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public_Webserver_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:035194411615:route-table/rtb-0604686097a13099a",
            "id": "rtb-0604686097a13099a",
            "owner_id": "035194411615",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Public_Webserver_route_table"
            },
            "tags_all": {
              "Name": "Public_Webserver_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b3d97f0a5029881"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.WebServer_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "WebServer_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-044e22245ba4c6807",
            "route_table_id": "rtb-0604686097a13099a",
            "subnet_id": "subnet-0be905b9981a02578"
          },
          "dependencies": [
            "aws_route_table.Public_Webserver_route_table",
            "aws_subnet.WebServer_subnets",
            "aws_vpc.WebServer_VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077fcf93a71105885",
            "route_table_id": "rtb-0604686097a13099a",
            "subnet_id": "subnet-0fb78a680648d7317"
          },
          "dependencies": [
            "aws_subnet.WebServer_subnets",
            "aws_vpc.WebServer_VPC",
            "aws_route_table.Public_Webserver_route_table"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Allow_Webserver_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:035194411615:security-group/sg-07bc2dd3979e06955",
            "description": "Allow Webserver traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07bc2dd3979e06955",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Webserver_sg",
            "name_prefix": "",
            "owner_id": "035194411615",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_webserver_traffic"
            },
            "tags_all": {
              "Name": "allow_webserver_traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b3d97f0a5029881"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.WebServer_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all_outbound_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-712169170",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-07bc2dd3979e06955",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.Allow_Webserver_sg",
            "aws_vpc.WebServer_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "http_inbound_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-3128137802",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07bc2dd3979e06955",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.Allow_Webserver_sg",
            "aws_vpc.WebServer_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh_inbound_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-217695743",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07bc2dd3979e06955",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.Allow_Webserver_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "WebServer_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:035194411615:subnet/subnet-0be905b9981a02578",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0be905b9981a02578",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "035194411615",
            "tags": {
              "Name": "WebServer_subnet-1"
            },
            "tags_all": {
              "Name": "WebServer_subnet-1"
            },
            "vpc_id": "vpc-05b3d97f0a5029881"
          },
          "dependencies": [
            "aws_vpc.WebServer_VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:035194411615:subnet/subnet-0fb78a680648d7317",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0fb78a680648d7317",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "035194411615",
            "tags": {
              "Name": "WebServer_subnet-2"
            },
            "tags_all": {
              "Name": "WebServer_subnet-2"
            },
            "vpc_id": "vpc-05b3d97f0a5029881"
          },
          "dependencies": [
            "aws_vpc.WebServer_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "WebServer_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:035194411615:vpc/vpc-05b3d97f0a5029881",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05e0457aaf12aa4bd",
            "default_route_table_id": "rtb-0d16ef3ecca1a938b",
            "default_security_group_id": "sg-0d11ccdebfea704e9",
            "dhcp_options_id": "dopt-0c8fb8da17ca80512",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-05b3d97f0a5029881",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d16ef3ecca1a938b",
            "owner_id": "035194411615",
            "tags": {
              "Name": "WebServer_VPC"
            },
            "tags_all": {
              "Name": "WebServer_VPC"
            }
          }
        }
      ]
    }
  ]
}